Tutorial-GiRaFFE_NRPy-Source_Terms: Increasing the automation of the memory access code.

--- a/in_progress/Tutorial-GiRaFFE_NRPy-Source_Terms.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-Source_Terms.ipynb
@@ -79,18 +79,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'gammaDD' is not defined",
+     "evalue": "name 'dirn' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-5-eb9ad656deee>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     81\u001b[0m \u001b[1;31m# We need to rerun a few of these functions with the reset lists to make sure these functions\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     82\u001b[0m \u001b[1;31m# don't cheat by using analytic expressions\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 83\u001b[1;33m \u001b[0mGRHD\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcompute_sqrtgammaDET\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgammaDD\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     84\u001b[0m \u001b[0mGRHD\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mu4U_in_terms_of_ValenciavU__rescale_ValenciavU_by_applying_speed_limit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0malpha\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbetaU\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgammaDD\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mValenciavU\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     85\u001b[0m \u001b[0mGRFFE\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcompute_smallb4U\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgammaDD\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbetaU\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0malpha\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mGRHD\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mu4U_ito_ValenciavU\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mBU\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msqrt4pi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'gammaDD' is not defined"
+      "\u001b[1;32m<ipython-input-2-7879467677c6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     25\u001b[0m     \u001b[1;31m# e.g.,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     26\u001b[0m     \u001b[1;31m# const REAL gammaDD00dD0 = auxevol_gfs[IDX4S(GAMMA_FACEDD00GF,i0,i1,i2)];\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 27\u001b[1;33m     \u001b[0mgeneral_access\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;34m\"const REAL \"\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mlhsvar\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\" = (auxevol_gfs[IDX4S(\"\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mvar\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\"GF,i0,i1,i2)]-auxevol_gfs[IDX4S(\"\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mvar\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\"GF,i0,i1,i2)])/dxx\"\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mdirn\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\";\\n\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     28\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     29\u001b[0m \u001b[1;31m# This quick function returns a nearby point for memory access. We need this because derivatives are not local operations.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'dirn' is not defined"
      ]
     }
    ],
@@ -105,29 +105,25 @@
     "\n",
     "thismodule = \"GiRaFFE_NRPy_Source_Terms\"\n",
     "\n",
-    "# Declare all the Cparameters we will need\n",
+    "# First, we declare some dummy tensors that we will use for the codegen.\n",
     "metricderivDDD = ixp.declarerank3(\"metricderivDDD\",\"sym01\",DIM=3)\n",
     "shiftderivUD = ixp.declarerank2(\"shiftderivUD\",\"nosym\",DIM=3)\n",
     "lapsederivD = ixp.declarerank1(\"lapsederivD\",DIM=3)\n",
     "\n",
-    "general_access = \"\"\"const REAL gammaDD00 = auxevol_gfs[IDX4S(GAMMADD00GF,i0,i1,i2)];\n",
-    "const REAL gammaDD01 = auxevol_gfs[IDX4S(GAMMADD01GF,i0,i1,i2)];\n",
-    "const REAL gammaDD02 = auxevol_gfs[IDX4S(GAMMADD02GF,i0,i1,i2)];\n",
-    "const REAL gammaDD11 = auxevol_gfs[IDX4S(GAMMADD11GF,i0,i1,i2)];\n",
-    "const REAL gammaDD12 = auxevol_gfs[IDX4S(GAMMADD12GF,i0,i1,i2)];\n",
-    "const REAL gammaDD22 = auxevol_gfs[IDX4S(GAMMADD22GF,i0,i1,i2)];\n",
-    "const REAL betaU0 = auxevol_gfs[IDX4S(BETAU0GF,i0,i1,i2)];\n",
-    "const REAL betaU1 = auxevol_gfs[IDX4S(BETAU1GF,i0,i1,i2)];\n",
-    "const REAL betaU2 = auxevol_gfs[IDX4S(BETAU2GF,i0,i1,i2)];\n",
-    "const REAL alpha = auxevol_gfs[IDX4S(ALPHAGF,i0,i1,i2)];\n",
-    "const REAL ValenciavU0 = auxevol_gfs[IDX4S(VALENCIAVU0GF,i0,i1,i2)];\n",
-    "const REAL ValenciavU1 = auxevol_gfs[IDX4S(VALENCIAVU1GF,i0,i1,i2)];\n",
-    "const REAL ValenciavU2 = auxevol_gfs[IDX4S(VALENCIAVU2GF,i0,i1,i2)];\n",
-    "const REAL BU0 = auxevol_gfs[IDX4S(BU0GF,i0,i1,i2)];\n",
-    "const REAL BU1 = auxevol_gfs[IDX4S(BU1GF,i0,i1,i2)];\n",
-    "const REAL BU2 = auxevol_gfs[IDX4S(BU2GF,i0,i1,i2)];\n",
-    "\"\"\"\n",
+    "# There are several pieces of C code that we will write ourselves because we need to do things\n",
+    "# a little bit outside of what NRPy+ is built for.\n",
+    "# First, we will write general memory access. We will read in values from memory at a given point\n",
+    "# for each quantity we care about.\n",
+    "general_access = \"\"\n",
+    "for var in [\"GAMMADD00\", \"GAMMADD01\", \"GAMMADD02\",\n",
+    "            \"GAMMADD11\", \"GAMMADD12\", \"GAMMADD22\",\n",
+    "            \"BETAU0\", \"BETAU1\", \"BETAU2\",\"ALPHAGF\"]:\n",
+    "    lhsvar = var.lower().replace(\"dd\",\"DD\").replace(\"u\",\"U\")\n",
+    "    # e.g.,\n",
+    "    # const REAL gammaDD00dD0 = auxevol_gfs[IDX4S(GAMMA_FACEDD00GF,i0,i1,i2)];\n",
+    "    general_access += \"const REAL \"+lhsvar+\" = auxevol_gfs[IDX4S(\"+var+\"GF,i0,i1,i2)];\\n\"\n",
     "\n",
+    "# This quick function returns a nearby point for memory access. We need this because derivatives are not local operations.\n",
     "def idxp1(dirn):\n",
     "    if dirn==\"0\":\n",
     "        return \"i0+1,i1,i2\"\n",
@@ -151,39 +147,37 @@
     "\n",
     "print(metric_deriv_access[0])\n",
     "\n",
-    "write_final_quantity = ixp.zerorank1(DIM=3)\n",
-    "write_final_quantity[0] = \"\"\"rhs_gfs[IDX4S(STILDED0GF,i0,i1,i2)] += Stilde_rhsD0;\n",
-    "\"\"\"\n",
-    "write_final_quantity[1] = \"\"\"rhs_gfs[IDX4S(STILDED1GF,i0,i1,i2)] += Stilde_rhsD1;\n",
-    "\"\"\"\n",
-    "write_final_quantity[2] = \"\"\"rhs_gfs[IDX4S(STILDED2GF,i0,i1,i2)] += Stilde_rhsD2;\n",
-    "\"\"\"\n",
+    "# This creates the C code that writes to the Stilde_rhs direction specified.\n",
+    "write_final_quantity = []\n",
+    "for dirn in [\"0\",\"1\",\"2\"]:\n",
+    "    write_final_quantity.append(\"\")\n",
+    "    write_final_quantity[dirn] += \"rhs_gfs[IDX4S(STILDED\"+dirn+\"GF,i0,i1,i2)] += Stilde_rhsD\"+dirn+\";\"\n",
     "\n",
     "# Declare this symbol:\n",
     "sqrt4pi = par.Cparameters(\"REAL\",thismodule,\"sqrt4pi\",\"sqrt(4.0*M_PI)\")\n",
     "\n",
-    "def write_out_functions_for_StildeD_source_term(gammaDD)\n",
-    "# We need to rerun a few of these functions with the reset lists to make sure these functions\n",
-    "# don't cheat by using analytic expressions\n",
-    "GRHD.compute_sqrtgammaDET(gammaDD)\n",
-    "GRHD.u4U_in_terms_of_ValenciavU__rescale_ValenciavU_by_applying_speed_limit(alpha, betaU, gammaDD, ValenciavU)\n",
-    "GRFFE.compute_smallb4U(gammaDD, betaU, alpha, GRHD.u4U_ito_ValenciavU, BU, sqrt4pi)\n",
-    "GRFFE.compute_smallbsquared(gammaDD, betaU, alpha, GRFFE.smallb4U)\n",
-    "GRFFE.compute_TEM4UU(gammaDD,betaU,alpha, GRFFE.smallb4U, GRFFE.smallbsquared,GRHD.u4U_ito_ValenciavU)\n",
-    "GRHD.compute_g4DD_zerotimederiv_dD(gammaDD,betaU,alpha, metricderivDDD,shiftderivUD,lapsederivD)\n",
-    "GRHD.compute_S_tilde_source_termD(alpha, GRHD.sqrtgammaDET,GRHD.g4DD_zerotimederiv_dD, GRFFE.TEM4UU)\n",
-    "for i in range(3):\n",
-    "    desc = \"Adds the source term to StildeD\"+str(i)+\".\"\n",
-    "    name = \"calculate_StildeD\"+str(i)+\"_source_term\"\n",
-    "    outCfunction(\n",
-    "        outfile  = os.path.join(out_dir,subdir,name+\".h\"), desc=desc, name=name,\n",
-    "        params   =\"const paramstruct *params,const REAL *auxevol_gfs, REAL *rhs_gfs\",\n",
-    "        body     = general_access \\\n",
-    "                  +metric_deriv_access[i]\\\n",
-    "                  +outputC(GRHD.S_tilde_source_termD[i],\"Stilde_rhsD\"+str(i),\"returnstring\",params=outCparams).replace(\"IDX4\",\"IDX4S\")\\\n",
-    "                  +write_final_quantity[i],\n",
-    "        loopopts =\"InteriorPoints\",\n",
-    "        rel_path_for_Cparams=os.path.join(\"../\"))\n"
+    "def write_out_functions_for_StildeD_source_term(gammaDD):\n",
+    "    # We need to rerun a few of these functions with the reset lists to make sure these functions\n",
+    "    # don't cheat by using analytic expressions\n",
+    "    GRHD.compute_sqrtgammaDET(gammaDD)\n",
+    "    GRHD.u4U_in_terms_of_ValenciavU__rescale_ValenciavU_by_applying_speed_limit(alpha, betaU, gammaDD, ValenciavU)\n",
+    "    GRFFE.compute_smallb4U(gammaDD, betaU, alpha, GRHD.u4U_ito_ValenciavU, BU, sqrt4pi)\n",
+    "    GRFFE.compute_smallbsquared(gammaDD, betaU, alpha, GRFFE.smallb4U)\n",
+    "    GRFFE.compute_TEM4UU(gammaDD,betaU,alpha, GRFFE.smallb4U, GRFFE.smallbsquared,GRHD.u4U_ito_ValenciavU)\n",
+    "    GRHD.compute_g4DD_zerotimederiv_dD(gammaDD,betaU,alpha, metricderivDDD,shiftderivUD,lapsederivD)\n",
+    "    GRHD.compute_S_tilde_source_termD(alpha, GRHD.sqrtgammaDET,GRHD.g4DD_zerotimederiv_dD, GRFFE.TEM4UU)\n",
+    "    for i in range(3):\n",
+    "        desc = \"Adds the source term to StildeD\"+str(i)+\".\"\n",
+    "        name = \"calculate_StildeD\"+str(i)+\"_source_term\"\n",
+    "        outCfunction(\n",
+    "            outfile  = os.path.join(out_dir,subdir,name+\".h\"), desc=desc, name=name,\n",
+    "            params   =\"const paramstruct *params,const REAL *auxevol_gfs, REAL *rhs_gfs\",\n",
+    "            body     = general_access \\\n",
+    "                      +metric_deriv_access[i]\\\n",
+    "                      +outputC(GRHD.S_tilde_source_termD[i],\"Stilde_rhsD\"+str(i),\"returnstring\",params=outCparams).replace(\"IDX4\",\"IDX4S\")\\\n",
+    "                      +write_final_quantity[i],\n",
+    "            loopopts =\"InteriorPoints\",\n",
+    "            rel_path_for_Cparams=os.path.join(\"../\"))\n"
    ]
   },
   {
@@ -285,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
