--- a/in_progress/GiRaFFE_NRPy_Tutorial.ipynb
+++ b/in_progress/GiRaFFE_NRPy_Tutorial.ipynb
@@ -32,9 +32,9 @@
     "        1. [Unstaggered A fields](Tutorial-GiRaFFE_NRPy_Main_Driver.ipynb)\n",
     "        1. [Staggered A fields](....)\n",
     "    1. The above driver routine pulls together a number of subroutines, called in this order:\n",
-    "        1. Calculate the gauge terms for $A_k$, $-\\partial_i (\\alpha \\Phi - \\beta^j A_j)$, and $\\Phi$, $-\\partial_j (\\alpha\\sqrt{\\gamma}A^j - \\beta^j [\\sqrt{\\gamma} \\Phi]) - \\xi \\alpha [\\sqrt{\\gamma} \\Phi]$:\n",
-    "            1. *Implementation*; See also: [Tutorial for GRHD](../Tutorial-GRHD_Equations-Cartesian.ipynb)\n",
-    "                1. [Unstaggered prescription](../Tutorial-GRFFE_Equations-Cartesian.ipynb)\n",
+    "        1. Calculate the gauge terms for $A_k$, $-\\partial_i (\\alpha \\Phi - \\beta^j A_j)$ and $\\tilde{S}_i$, $\\frac{1}{2} \\alpha\\sqrt{\\gamma} T^{\\mu\\nu}_{\\rm EM} g_{\\mu\\nu,i}$, as well as  $\\Phi$, $-\\partial_j (\\alpha\\sqrt{\\gamma}A^j - \\beta^j [\\sqrt{\\gamma} \\Phi]) - \\xi \\alpha [\\sqrt{\\gamma} \\Phi]$:\n",
+    "            1. *Implementation*; [Unstaggered prescription](Tutorial-GiRaFFE_NRPy-Source_Terms.ipynb)\n",
+    "                1. See also: [Tutorial for GRFFE](../Tutorial-GRFFE_Equations-Cartesian.ipynb); [Tutorial for GRHD](../Tutorial-GRHD_Equations-Cartesian.ipynb)\n",
     "                1. Staggered prescription: **TODO: create notebook for C code.**\n",
     "            1. *Validation*\n",
     "                1. [Unstaggered prescription](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Source_Terms.ipynb)\n",
@@ -44,24 +44,24 @@
     "\n",
     "1. Main Drivers\n",
     "    * These modules will generate all the functions from the next two sections with one call and provide wrapper functions so that all the reconstructions and function calls can be done in the proper order, while avoiding cluttering up the main notebook. They come in two flavors:\n",
-    "        * [Unstaggered](Tutorial-GiRaFFE_NRPy_Main_Driver.ipynb): This implementation uses only cell-centered grids. This makes it easier to avoid coordinate singularities in curvilinear coordinate systems, but is less stable shocks whose speed approaches the speed of light. \n",
+    "        * <font color='yellow'><b> Needs some checking </b></font>[Unstaggered](Tutorial-GiRaFFE_NRPy_Main_Driver.ipynb): This implementation uses only cell-centered grids. This makes it easier to avoid coordinate singularities in curvilinear coordinate systems, but is less stable shocks whose speed approaches the speed of light. \n",
     "        * Staggered: This implementation staggers the electromagnetic quantities. While this is more stable for very fast shocks, it runs the risk of sampling the staggered quantities at coordinate singularities. **TODO: Tutorial**\n",
     "1. Evolution: Find the right-hand sides of evolution equations for the conservative variables\n",
     "    1. Calculate the gauge terms for $A_k$, $-\\partial_i (\\alpha \\Phi - \\beta^j A_j)$, and $\\Phi$, $-\\partial_j (\\alpha\\sqrt{\\gamma}A^j - \\beta^j [\\sqrt{\\gamma} \\Phi]) - \\xi \\alpha [\\sqrt{\\gamma} \\Phi]$:\n",
-    "        * [Unstaggered prescription](../Tutorial-GRFFE_Equations-Cartesian.ipynb)\n",
+    "        * <font color='orange'><b> In progress </b></font>[Unstaggered prescription](../Tutorial-GRFFE_Equations-Cartesian.ipynb)\n",
     "            * See also: [Tutorial for GRHD](../Tutorial-GRHD_Equations-Cartesian.ipynb)\n",
     "            * [**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Source_Terms.ipynb)\n",
     "        * Staggered prescription: **TODO: create notebook for C code.**\n",
-    "    1. [Interpolate metric on cell faces:](Tutorial-GiRaFFE_NRPy-Metric_Face_Values.ipynb)\n",
+    "    1. <font color='yellow'><b> Just spot-checking </b></font>[Interpolate metric on cell faces:](Tutorial-GiRaFFE_NRPy-Metric_Face_Values.ipynb)\n",
     "        * Basic interpolation of the metric gridfunctions at cell centers to cell faces given a specific direction. \n",
     "        * [**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Metric_Face_Values.ipynb)\n",
-    "    1. [Reconstruct primitives on cell faces:](Tutorial-GiRaFFE_NRPy-PPM.ipynb)\n",
+    "    1. <font color='yellow'><b> Just spot-checking</b></font>[Reconstruct primitives on cell faces:](Tutorial-GiRaFFE_NRPy-PPM.ipynb)\n",
     "        * This uses the piecewise-parabolic method to reconstruct gridfunctions on cell faces and apply slope-limiting algorithms mitigate the Gibbs phenomenon and preserve shocks.\n",
     "        * [**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-PPM.ipynb)\n",
     "    1. [Solve the Riemann Problem for $\\tilde{S}_i$:](Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb)\n",
     "        * Use the reconstructed velocities and magnetic fields on the left and right sides of the cell faces to solve the Riemann problem and compute the flux of $\\tilde{S}_i$ on the interface.\n",
     "        * [**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Stilde_flux.ipynb)\n",
-    "    1. Solve the Riemann Problem for $A_i$:\n",
+    "    1. <font color='orange'><b> Needs major overhaul </b></font>Solve the Riemann Problem for $A_i$:\n",
     "        * Here, we apply a similar algorithm as in the previous step to compute the electric field $E_i = \\epsilon_{ijk} v^i B^i$. \n",
     "        * [Unstaggered prescription](Tutorial-GiRaFFE_NRPy-Afield_flux.ipynb): \n",
     "            * [**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Afield_flux.ipynb)\n",
@@ -72,10 +72,10 @@
     "        * <font color='green'><b> Patrick Seal of Approval</b></font> [Unstaggered prescription](Tutorial-GiRaFFE_NRPy-A2B.ipynb):\n",
     "            * [**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-A2B.ipynb)\n",
     "        * Staggered prescription: **TODO: create notebook for C code.**\n",
-    "    1. [Recalculate $\\bar{v}^i$ and apply fixes to $\\tilde{S}_i$ and $\\bar{v}^i$:](Tutorial-GiRaFFE_NRPy-C2P_P2C.ipynb)\n",
+    "    1. <font color='yellow'><b> Just spot-checking</b></font>[Recalculate $\\bar{v}^i$ and apply fixes to $\\tilde{S}_i$ and $\\bar{v}^i$:](Tutorial-GiRaFFE_NRPy-C2P_P2C.ipynb)\n",
     "        * Apply fixes to $\\tilde{S}_i$, then recompute $\\bar{v}^i$ at the next time step. Then, apply fixes to $\\bar{v}^i$ to preserve current sheets, and recompute $\\tilde{S}_i$ to match.\n",
     "        * [**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-C2P_P2C.ipynb)\n",
-    "    1. [Apply boundary conditions:](Tutorial-GiRaFFE_NRPy-BCs.ipynb)\n",
+    "    1. <font color='yellow'><b> Just spot-checking</b></font>[Apply boundary conditions:](Tutorial-GiRaFFE_NRPy-BCs.ipynb)\n",
     "        * Apply linear (To be upgraded?) outer boundary conditions to the vector potential and Valencia three-velocity. \n",
     "        * [**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-BCs.ipynb)\n",
     "\n",
@@ -112,7 +112,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
