SEOBNR: update derivative notebook validation status.

--- a/Tutorial-SEOBNR_Derivative_Routine.ipynb
+++ b/Tutorial-SEOBNR_Derivative_Routine.ipynb
@@ -10,11 +10,7 @@
     "\n",
     "## This module contains a routine for computing partial derivatives of a mathematical expression that is written as several subexpressions.\n",
     "\n",
-    "**Notebook Status:** <font color='red'><b> In progress </b></font>\n",
-    "\n",
-    "**TODO:**\n",
-    "1. Edit location of NRPy+ tutorial\n",
-    "1. Edit location of v3 Hamiltonian notebook (in introduction)\n",
+    "**Notebook Status:** <font color='green'><b> Validated </b></font>\n",
     "\n",
     "**Validation Notes:** This tutorial notebook has been confirmed to be self-consistent with its corresponding NRPy+ module, as documented [below](#code_validation). Additionally, this notebook has been validated by checking that results are consistent with exact derivative expressions used in the SEOBNRv3_opt approixment of [LALSuite](https://git.ligo.org/lscsoft/lalsuite).\n",
     "\n",
