SEOBNR: add check to derivative routine for a sufficiently new version of SymPy.

--- a/Tutorial-SEOBNR_Derivative_Routine.ipynb
+++ b/Tutorial-SEOBNR_Derivative_Routine.ipynb
@@ -67,17 +67,19 @@
     "# Step 1.a: import all needed modules from Python/NRPy+:\n",
     "import sympy as sp                # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
     "import os, sys                    # Standard Python modules for multiplatform OS-level functions\n",
-    "\n",
-    "# Step 1.?: check system path so can use outputC; #TylerK: remove and put outputC back with other imports\n",
-    "nrpy_dir_path = os.path.join(\"..\")\n",
-    "if nrpy_dir_path not in sys.path:\n",
-    "    sys.path.append(nrpy_dir_path)\n",
-    "\n",
     "import cmdline_helper as cmd      # NRPy+: Multi-platform Python command-line interface\n",
     "from outputC import superfast_uniq, lhrh      # Remove duplicate entries from a Python array; store left- and right-\n",
     "                                              #   hand sides of mathematical expressions\n",
     "\n",
-    "# Step 1.b: Name the directory of input files\n",
+    "# Step 1.b: Check for a sufficiently new version of SymPy (for validation)\n",
+    "# Ignore the rc's and b's for release candidates & betas.\n",
+    "sympy_version = sp.__version__.replace('rc', '...').replace('b', '...')\n",
+    "sympy_version_decimal = float(int(sympy_version.split(\".\")[0]) + int(sympy_version.split(\".\")[1])/10.0)\n",
+    "if sympy_version_decimal < 1.4:\n",
+    "    print('Error: SEOBNR_Derivative_Routine does not support SymPy < 1.4; derivative data structure changed')\n",
+    "    sys.exit(1)\n",
+    "\n",
+    "# Step 1.c: Name the directory of input files\n",
     "inputdir = \"SEOBNR\"\n",
     "cmd.mkdir(inputdir)"
    ]
