SEOBNR: update derivative routine validation to compare expressions mathematically and not as strings.

--- a/Tutorial-SEOBNR_Derivative_Routine.ipynb
+++ b/Tutorial-SEOBNR_Derivative_Routine.ipynb
@@ -75,8 +75,8 @@
     "# Ignore the rc's and b's for release candidates & betas.\n",
     "sympy_version = sp.__version__.replace('rc', '...').replace('b', '...')\n",
     "sympy_version_decimal = float(int(sympy_version.split(\".\")[0]) + int(sympy_version.split(\".\")[1])/10.0)\n",
-    "if sympy_version_decimal < 1.4:\n",
-    "    print('Error: SEOBNR_Derivative_Routine does not support SymPy < 1.4; derivative data structure changed')\n",
+    "if sympy_version_decimal < 1.2:\n",
+    "    print('Error: NRPy+ does not support SymPy < 1.2')\n",
     "    sys.exit(1)\n",
     "\n",
     "# Step 1.c: Name the directory of input files\n",
@@ -447,15 +447,19 @@
     "    # Read the lines of each file\n",
     "    file1_lines=[]\n",
     "    file2_lines=[]\n",
-    "    # Remove spaces to make lines consistent\n",
     "    for line in file1.readlines():\n",
-    "        file1_lines.append(line.replace(\" \", \"\"))\n",
+    "        file1_lines.append(line)\n",
     "    for line in file2.readlines():\n",
-    "        file2_lines.append(line.replace(\" \", \"\"))\n",
+    "        file2_lines.append(line)\n",
+    "    # Compare right-hand sides of the expressions by computing the difference between them\n",
     "    num_diffs = 0\n",
-    "    for line in difflib.unified_diff(file1_lines, file2_lines, fromfile=os.path.join(inputdir,file), tofile=os.path.join(inputdir,outfile)):\n",
-    "        sys.stdout.writelines(line)\n",
-    "        num_diffs = num_diffs + 1\n",
+    "    for i in range(len(file1_lines)):#TYLERK\n",
+    "        expr_new = sp.sympify(file1_lines[i].split(\"=\")[0])\n",
+    "        expr_validated = sp.sympify(file2_lines[i].split(\"=\")[0])\n",
+    "        difference = sp.simplify(expr_new - expr_validated)\n",
+    "        if difference != 0:\n",
+    "            num_diffs + 1\n",
+    "            print(difference)\n",
     "    if num_diffs == 0:\n",
     "        print(\"No difference. TEST PASSED!\")\n",
     "    else:\n",
