--- a/in_progress/Tutorial-GiRaFFE_NRPy-Source_Terms.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-Source_Terms.ipynb
@@ -61,7 +61,7 @@
     "    sys.path.append(nrpy_dir_path)\n",
     "\n",
     "import cmdline_helper as cmd\n",
-    "outdir = os.path.join(\"GiRaFFE_NRPy/GiRaFFE_Ccode_validation/RHSs/\")\n",
+    "outdir = os.path.join(\"GiRaFFE_NRPy\",\"GiRaFFE_Ccode_validation\",\"RHSs\")\n",
     "cmd.mkdir(outdir)"
    ]
   },
@@ -81,82 +81,74 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'dirn' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-7879467677c6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     25\u001b[0m     \u001b[1;31m# e.g.,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     26\u001b[0m     \u001b[1;31m# const REAL gammaDD00dD0 = auxevol_gfs[IDX4S(GAMMA_FACEDD00GF,i0,i1,i2)];\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 27\u001b[1;33m     \u001b[0mgeneral_access\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;34m\"const REAL \"\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mlhsvar\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\" = (auxevol_gfs[IDX4S(\"\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mvar\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\"GF,i0,i1,i2)]-auxevol_gfs[IDX4S(\"\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mvar\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\"GF,i0,i1,i2)])/dxx\"\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mdirn\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\";\\n\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     28\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     29\u001b[0m \u001b[1;31m# This quick function returns a nearby point for memory access. We need this because derivatives are not local operations.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'dirn' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Step 1: The StildeD RHS *source* term\n",
-    "from outputC import outCfunction, lhrh # NRPy+: Core C code output module\n",
+    "from outputC import outputC, outCfunction, lhrh # NRPy+: Core C code output module\n",
     "import finite_difference as fin  # NRPy+: Finite difference C code generation module\n",
     "import NRPy_param_funcs as par   # NRPy+: Parameter interface\n",
     "import grid as gri               # NRPy+: Functions having to do with numerical grids\n",
     "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
     "import GRHD.equations as GRHD    # NRPy+: Generate general relativistic hydrodynamics equations\n",
+    "import GRFFE.equations as GRFFE  # NRPy+: Generate general relativistic force-free electrodynamics equations\n",
     "\n",
     "thismodule = \"GiRaFFE_NRPy_Source_Terms\"\n",
     "\n",
-    "# First, we declare some dummy tensors that we will use for the codegen.\n",
-    "metricderivDDD = ixp.declarerank3(\"metricderivDDD\",\"sym01\",DIM=3)\n",
-    "shiftderivUD = ixp.declarerank2(\"shiftderivUD\",\"nosym\",DIM=3)\n",
-    "lapsederivD = ixp.declarerank1(\"lapsederivD\",DIM=3)\n",
-    "\n",
-    "# There are several pieces of C code that we will write ourselves because we need to do things\n",
-    "# a little bit outside of what NRPy+ is built for.\n",
-    "# First, we will write general memory access. We will read in values from memory at a given point\n",
-    "# for each quantity we care about.\n",
-    "general_access = \"\"\n",
-    "for var in [\"GAMMADD00\", \"GAMMADD01\", \"GAMMADD02\",\n",
-    "            \"GAMMADD11\", \"GAMMADD12\", \"GAMMADD22\",\n",
-    "            \"BETAU0\", \"BETAU1\", \"BETAU2\",\"ALPHAGF\"]:\n",
-    "    lhsvar = var.lower().replace(\"dd\",\"DD\").replace(\"u\",\"U\")\n",
-    "    # e.g.,\n",
-    "    # const REAL gammaDD00dD0 = auxevol_gfs[IDX4S(GAMMA_FACEDD00GF,i0,i1,i2)];\n",
-    "    general_access += \"const REAL \"+lhsvar+\" = auxevol_gfs[IDX4S(\"+var+\"GF,i0,i1,i2)];\\n\"\n",
-    "\n",
-    "# This quick function returns a nearby point for memory access. We need this because derivatives are not local operations.\n",
-    "def idxp1(dirn):\n",
-    "    if dirn==\"0\":\n",
-    "        return \"i0+1,i1,i2\"\n",
-    "    if dirn==\"1\":\n",
-    "        return \"i0,i1+1,i2\"\n",
-    "    if dirn==\"2\":\n",
-    "        return \"i0,i1,i2+1\"\n",
-    "\n",
-    "# Next we evaluate needed derivatives of the metric, based on their values at cell faces\n",
-    "metric_deriv_access = []\n",
-    "for dirn in [\"0\",\"1\",\"2\"]:\n",
-    "    metric_deriv_access.append(\"\")\n",
-    "    for var in [\"GAMMA_FACEDD00\", \"GAMMA_FACEDD01\", \"GAMMA_FACEDD02\",\n",
-    "                \"GAMMA_FACEDD11\", \"GAMMA_FACEDD12\", \"GAMMA_FACEDD22\",\n",
-    "                \"BETA_FACEU0\", \"BETA_FACEU1\", \"BETA_FACEU2\",\"ALPHA_FACEGF\"]:\n",
-    "        lhsvar = var.lower().replace(\"dd\",\"DD\").replace(\"u\",\"U\").replace(\"_face\",\"\")\n",
+    "def generate_memory_access_code():\n",
+    "    # There are several pieces of C code that we will write ourselves because we need to do things\n",
+    "    # a little bit outside of what NRPy+ is built for.\n",
+    "    # First, we will write general memory access. We will read in values from memory at a given point\n",
+    "    # for each quantity we care about.\n",
+    "    global general_access\n",
+    "    general_access = \"\"\n",
+    "    for var in [\"GAMMADD00\", \"GAMMADD01\", \"GAMMADD02\",\n",
+    "                \"GAMMADD11\", \"GAMMADD12\", \"GAMMADD22\",\n",
+    "                \"BETAU0\", \"BETAU1\", \"BETAU2\",\"ALPHAGF\",\n",
+    "                \"BU0\",\"BU1\",\"BU2\",\n",
+    "                \"VALENCIAVU0\",\"VALENCIAVU1\",\"VALENCIAVU2\"]:\n",
+    "        lhsvar = var.lower().replace(\"dd\",\"DD\").replace(\"u\",\"U\").replace(\"bU\",\"BU\").replace(\"valencia\",\"Valencia\")\n",
     "        # e.g.,\n",
-    "        # const REAL gammaDD00dD0 = (auxevol_gfs[IDX4S(GAMMA_FACEDD00GF,i0+1,i1,i2)]-auxevol_gfs[IDX4S(GAMMA_FACEDD00GF,i0,i1,i2)])/dxx0;\n",
-    "        metric_deriv_access[dirn] += \"const REAL \"+lhsvar+\"dD\"+dirn+\" = (auxevol_gfs[IDX4S(\"+var+\"GF,\"+idxp1(dirn)+\")]-auxevol_gfs[IDX4S(\"+var+\"GF,i0,i1,i2)])/dxx\"+dirn+\";\\n\"\n",
-    "    metric_deriv_access[dirn] += \"REAL Stilde_rhsD\"+dirn+\";\\n\"\n",
+    "        # const REAL gammaDD00dD0 = auxevol_gfs[IDX4S(GAMMA_FACEDD00GF,i0,i1,i2)];\n",
+    "        general_access += \"const REAL \"+lhsvar+\" = auxevol_gfs[IDX4S(\"+var+\"GF,i0,i1,i2)];\\n\"\n",
     "\n",
-    "print(metric_deriv_access[0])\n",
+    "    # This quick function returns a nearby point for memory access. We need this because derivatives are not local operations.\n",
+    "    def idxp1(dirn):\n",
+    "        if dirn==0:\n",
+    "            return \"i0+1,i1,i2\"\n",
+    "        if dirn==1:\n",
+    "            return \"i0,i1+1,i2\"\n",
+    "        if dirn==2:\n",
+    "            return \"i0,i1,i2+1\"\n",
     "\n",
-    "# This creates the C code that writes to the Stilde_rhs direction specified.\n",
-    "write_final_quantity = []\n",
-    "for dirn in [\"0\",\"1\",\"2\"]:\n",
-    "    write_final_quantity.append(\"\")\n",
-    "    write_final_quantity[dirn] += \"rhs_gfs[IDX4S(STILDED\"+dirn+\"GF,i0,i1,i2)] += Stilde_rhsD\"+dirn+\";\"\n",
+    "    # Next we evaluate needed derivatives of the metric, based on their values at cell faces\n",
+    "    global metric_deriv_access\n",
+    "    metric_deriv_access = []\n",
+    "    for dirn in range(3):\n",
+    "        metric_deriv_access.append(\"\")\n",
+    "        for var in [\"GAMMA_FACEDDdD00\", \"GAMMA_FACEDDdD01\", \"GAMMA_FACEDDdD02\",\n",
+    "                    \"GAMMA_FACEDDdD11\", \"GAMMA_FACEDDdD12\", \"GAMMA_FACEDDdD22\",\n",
+    "                    \"BETA_FACEUdD0\", \"BETA_FACEUdD1\", \"BETA_FACEUdD2\",\"ALPHA_FACEdD\"]:\n",
+    "            lhsvar = var.lower().replace(\"dddd\",\"DDdD\").replace(\"udd\",\"UdD\").replace(\"dd\",\"dD\").replace(\"u\",\"U\").replace(\"_face\",\"\")\n",
+    "            rhsvar = var.replace(\"dD\",\"\")\n",
+    "            # e.g.,\n",
+    "            # const REAL gammaDDdD000 = (auxevol_gfs[IDX4S(GAMMA_FACEDD00GF,i0+1,i1,i2)]-auxevol_gfs[IDX4S(GAMMA_FACEDD00GF,i0,i1,i2)])/dxx0;\n",
+    "            metric_deriv_access[dirn] += \"const REAL \"+lhsvar+str(dirn)+\" = (auxevol_gfs[IDX4S(\"+rhsvar+\"GF,\"+idxp1(dirn)+\")]-auxevol_gfs[IDX4S(\"+rhsvar+\"GF,i0,i1,i2)])/dxx\"+str(dirn)+\";\\n\"\n",
+    "        metric_deriv_access[dirn] += \"REAL Stilde_rhsD\"+str(dirn)+\";\\n\"\n",
     "\n",
-    "# Declare this symbol:\n",
-    "sqrt4pi = par.Cparameters(\"REAL\",thismodule,\"sqrt4pi\",\"sqrt(4.0*M_PI)\")\n",
+    "    # This creates the C code that writes to the Stilde_rhs direction specified.\n",
+    "    global write_final_quantity\n",
+    "    write_final_quantity = []\n",
+    "    for dirn in range(3):\n",
+    "        write_final_quantity.append(\"\")\n",
+    "        write_final_quantity[dirn] += \"rhs_gfs[IDX4S(STILDED\"+str(dirn)+\"GF,i0,i1,i2)] += Stilde_rhsD\"+str(dirn)+\";\"\n",
     "\n",
-    "def write_out_functions_for_StildeD_source_term(gammaDD):\n",
+    "def write_out_functions_for_StildeD_source_term(outdir,outCparams,gammaDD,betaU,alpha,ValenciavU,BU,sqrt4pi):\n",
+    "    generate_memory_access_code()\n",
+    "    # First, we declare some dummy tensors that we will use for the codegen.\n",
+    "    gammaDDdD  = ixp.declarerank3(\"gammaDDdD\",\"sym01\",DIM=3)\n",
+    "    betaUdD = ixp.declarerank2(\"betaUdD\",\"nosym\",DIM=3)\n",
+    "    alphadD = ixp.declarerank1(\"alphadD\",DIM=3)\n",
+    "\n",
     "    # We need to rerun a few of these functions with the reset lists to make sure these functions\n",
     "    # don't cheat by using analytic expressions\n",
     "    GRHD.compute_sqrtgammaDET(gammaDD)\n",
@@ -164,13 +156,13 @@
     "    GRFFE.compute_smallb4U(gammaDD, betaU, alpha, GRHD.u4U_ito_ValenciavU, BU, sqrt4pi)\n",
     "    GRFFE.compute_smallbsquared(gammaDD, betaU, alpha, GRFFE.smallb4U)\n",
     "    GRFFE.compute_TEM4UU(gammaDD,betaU,alpha, GRFFE.smallb4U, GRFFE.smallbsquared,GRHD.u4U_ito_ValenciavU)\n",
-    "    GRHD.compute_g4DD_zerotimederiv_dD(gammaDD,betaU,alpha, metricderivDDD,shiftderivUD,lapsederivD)\n",
+    "    GRHD.compute_g4DD_zerotimederiv_dD(gammaDD,betaU,alpha, gammaDDdD,betaUdD,alphadD)\n",
     "    GRHD.compute_S_tilde_source_termD(alpha, GRHD.sqrtgammaDET,GRHD.g4DD_zerotimederiv_dD, GRFFE.TEM4UU)\n",
     "    for i in range(3):\n",
     "        desc = \"Adds the source term to StildeD\"+str(i)+\".\"\n",
     "        name = \"calculate_StildeD\"+str(i)+\"_source_term\"\n",
     "        outCfunction(\n",
-    "            outfile  = os.path.join(out_dir,subdir,name+\".h\"), desc=desc, name=name,\n",
+    "            outfile  = os.path.join(outdir,name+\".h\"), desc=desc, name=name,\n",
     "            params   =\"const paramstruct *params,const REAL *auxevol_gfs, REAL *rhs_gfs\",\n",
     "            body     = general_access \\\n",
     "                      +metric_deriv_access[i]\\\n",
@@ -178,13 +170,6 @@
     "                      +write_final_quantity[i],\n",
     "            loopopts =\"InteriorPoints\",\n",
     "            rel_path_for_Cparams=os.path.join(\"../\"))\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We will now create the structures we need: register the gridfunctions `AD` and `BU`, declare `AD_dD` for $A_{i,j}$ and zero `BU` for $B^i$. Then, we'll build the standard form of `BU` that we will use: $$B^i = \\epsilon^{ijk} A_{k,j}.$$"
    ]
   },
   {
@@ -204,39 +189,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output C function calculate_StildeD0_source_term() to file GiRaFFE_NRPy\\GiRaFFE_Ccode_validation\\RHSs\\calculate_StildeD0_source_term.h\n",
+      "Output C function calculate_StildeD1_source_term() to file GiRaFFE_NRPy\\GiRaFFE_Ccode_validation\\RHSs\\calculate_StildeD1_source_term.h\n",
+      "Output C function calculate_StildeD2_source_term() to file GiRaFFE_NRPy\\GiRaFFE_Ccode_validation\\RHSs\\calculate_StildeD2_source_term.h\n",
+      "Output C function calculate_StildeD0_source_term() to file GiRaFFE_NRPy\\GiRaFFE_Ccode_library\\RHSs\\calculate_StildeD0_source_term.h\n",
+      "Output C function calculate_StildeD1_source_term() to file GiRaFFE_NRPy\\GiRaFFE_Ccode_library\\RHSs\\calculate_StildeD1_source_term.h\n",
+      "Output C function calculate_StildeD2_source_term() to file GiRaFFE_NRPy\\GiRaFFE_Ccode_library\\RHSs\\calculate_StildeD2_source_term.h\n",
+      "Printing difference between original C code and this code...\n",
+      "Checking file calculate_StildeD0_source_term.h\n",
+      "No difference. TEST PASSED!\n",
+      "Checking file calculate_StildeD1_source_term.h\n",
+      "No difference. TEST PASSED!\n",
+      "Checking file calculate_StildeD2_source_term.h\n",
+      "No difference. TEST PASSED!\n"
+     ]
+    }
+   ],
    "source": [
-    "gammaDD = ixp.register_gridfunctions_for_single_rank2(\"auxevol\",\"gammaDD\",\"sym01\",DIM=3)\n",
+    "# Declare gridfunctions necessary to generate the C code:\n",
+    "gammaDD = ixp.register_gridfunctions_for_single_rank2(\"AUXEVOL\",\"gammaDD\",\"sym01\",DIM=3)\n",
+    "betaU = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"betaU\",DIM=3)\n",
+    "alpha = gri.register_gridfunctions(\"AUXEVOL\",\"alpha\",DIM=3)\n",
+    "BU = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"BU\",DIM=3)\n",
+    "ValenciavU = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"ValenciavU\",DIM=3)\n",
+    "StildeD = ixp.register_gridfunctions_for_single_rank1(\"EVOL\",\"StildeD\",DIM=3)\n",
+    "# Declare this symbol:\n",
+    "sqrt4pi = par.Cparameters(\"REAL\",thismodule,\"sqrt4pi\",\"sqrt(4.0*M_PI)\")\n",
+    "\n",
+    "# First, we generate the file using the functions written in this notebook:\n",
+    "outCparams = \"outCverbose=False\"\n",
+    "write_out_functions_for_StildeD_source_term(outdir,outCparams,gammaDD,betaU,alpha,ValenciavU,BU,sqrt4pi)\n",
+    "\n",
     "# Define the directory that we wish to validate against:\n",
-    "valdir = os.path.join(\"GiRaFFE_NRPy/GiRaFFE_Ccode_library/RHSs/\")\n",
+    "valdir = os.path.join(\"GiRaFFE_NRPy\",\"GiRaFFE_Ccode_library\",\"RHSs\")\n",
+    "cmd.mkdir(valdir)\n",
     "\n",
-    "# import GiRaFFE_NRPy.GiRaFFE_NRPy_A2B as A2B\n",
-    "# A2B.GiRaFFE_NRPy_A2B(valdir,gammaDD,AD,BU)\n",
+    "import GiRaFFE_NRPy.GiRaFFE_NRPy_Source_Terms as source\n",
+    "source.write_out_functions_for_StildeD_source_term(valdir,outCparams,gammaDD,betaU,alpha,ValenciavU,BU,sqrt4pi)\n",
     "\n",
-    "# import difflib\n",
-    "# import sys\n",
+    "import difflib\n",
+    "import sys\n",
     "\n",
-    "# print(\"Printing difference between original C code and this code...\")\n",
-    "# # Open the files to compare\n",
-    "# file = \"driver_AtoB.h\"\n",
+    "print(\"Printing difference between original C code and this code...\")\n",
+    "# Open the files to compare\n",
+    "files = [\"calculate_StildeD0_source_term.h\",\"calculate_StildeD1_source_term.h\",\"calculate_StildeD2_source_term.h\"]\n",
     "\n",
-    "# print(\"Checking file \" + file)\n",
-    "# with open(os.path.join(valdir,file)) as file1, open(os.path.join(outdir,file)) as file2:\n",
-    "#     # Read the lines of each file\n",
-    "#     file1_lines = file1.readlines()\n",
-    "#     file2_lines = file2.readlines()\n",
-    "#     num_diffs = 0\n",
-    "#     for line in difflib.unified_diff(file1_lines, file2_lines, fromfile=os.path.join(valdir+file), tofile=os.path.join(outdir+file)):\n",
-    "#         sys.stdout.writelines(line)\n",
-    "#         num_diffs = num_diffs + 1\n",
-    "#     if num_diffs == 0:\n",
-    "#         print(\"No difference. TEST PASSED!\")\n",
-    "#     else:\n",
-    "#         print(\"ERROR: Disagreement found with .py file. See differences above.\")"
+    "for file in files:\n",
+    "    print(\"Checking file \" + file)\n",
+    "    with open(os.path.join(valdir,file)) as file1, open(os.path.join(outdir,file)) as file2:\n",
+    "        # Read the lines of each file\n",
+    "        file1_lines = file1.readlines()\n",
+    "        file2_lines = file2.readlines()\n",
+    "        num_diffs = 0\n",
+    "        for line in difflib.unified_diff(file1_lines, file2_lines, fromfile=os.path.join(valdir+file), tofile=os.path.join(outdir+file)):\n",
+    "            sys.stdout.writelines(line)\n",
+    "            num_diffs = num_diffs + 1\n",
+    "        if num_diffs == 0:\n",
+    "            print(\"No difference. TEST PASSED!\")\n",
+    "        else:\n",
+    "            print(\"ERROR: Disagreement found with .py file. See differences above.\")\n",
+    "            sys.exit(1)"
    ]
   },
   {
@@ -254,9 +275,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Notebook output to PDF is only supported on Linux systems, with pdflatex installed.\n"
+     ]
+    }
+   ],
    "source": [
     "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
     "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-GiRaFFE_NRPy-A2B\")"
