SEOBNR: remove unused import and clean up function definition in derivative routine.

--- a/Tutorial-SEOBNR_Derivative_Routine.ipynb
+++ b/Tutorial-SEOBNR_Derivative_Routine.ipynb
@@ -74,7 +74,7 @@
    "source": [
     "# Step 1.a: import all needed modules from Python/NRPy+:\n",
     "import sympy as sp                # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
-    "import os, sys                    # Standard Python modules for multiplatform OS-level functions\n",
+    "import sys                        # Standard Python modules for multiplatform OS-level functions\n",
     "from outputC import superfast_uniq, lhrh      # Remove duplicate entries from a Python array; store left- and right-\n",
     "                                              #   hand sides of mathematical expressions\n",
     "\n",
