GiRaFFE_NRPy_Tutorial: Edits for clarity and updates to progress.

--- a/in_progress/GiRaFFE_NRPy_Tutorial.ipynb
+++ b/in_progress/GiRaFFE_NRPy_Tutorial.ipynb
@@ -29,11 +29,11 @@
     "        1. [Validation of all initial data choices against original `GiRaFFEfood`, demonstrating agreement to round-off error.](Tutorial-Start_to_Finish_UnitTest-GiRaFFEfood_NRPy.ipynb) <font color='green'><b> Patrick Seal of Approval</b></font>\n",
     "1. **GiRaFFE: Solve the GRFFE equations to evolve the initial data forward in time**\n",
     "    1. *Generate main C code driver* for \n",
-    "        1. <font color='orange'><b> Needs some checking </b></font>[Unstaggered A fields](Tutorial-GiRaFFE_NRPy_Main_Driver.ipynb)\n",
-    "        1. [Staggered A fields](....) **TODO**\n",
+    "        1. <font color='green'><b> Patrick Seal of Approval </b></font>[Unstaggered A fields](Tutorial-GiRaFFE_NRPy_Main_Driver.ipynb)\n",
+    "        1. <font color='green'><b> Needs additions once they're written. </b></font>[Staggered A fields](Tutorial-GiRaFFE_NRPy_Main_Driver_staggered.ipynb)\n",
     "    1. The above driver routine pulls together several subroutines, called in this order:\n",
     "        1. Update RHSs: Find the right-hand sides of evolution equations for the conservative variables\n",
-    "            1. Calculate the gauge terms for $A_k$, $-\\partial_i (\\alpha \\Phi - \\beta^j A_j)$ and $\\tilde{S}_i$, $\\frac{1}{2} \\alpha\\sqrt{\\gamma} T^{\\mu\\nu}_{\\rm EM} g_{\\mu\\nu,i}$, as well as  $\\Phi$, $-\\partial_j (\\alpha\\sqrt{\\gamma}A^j - \\beta^j [\\sqrt{\\gamma} \\Phi]) - \\xi \\alpha [\\sqrt{\\gamma} \\Phi]$:\n",
+    "            1. Calculate the gauge terms for $A_k$, $-\\partial_i (\\alpha \\Phi - \\beta^j A_j)$ and $\\tilde{S}_i$, $\\frac{1}{2} \\alpha\\sqrt{\\gamma} T^{\\mu\\nu}_{\\rm EM} g_{\\mu\\nu,i}$, as well as $\\Phi$, $-\\partial_j (\\alpha\\sqrt{\\gamma}A^j - \\beta^j [\\sqrt{\\gamma} \\Phi]) - \\xi \\alpha [\\sqrt{\\gamma} \\Phi]$:\n",
     "                1. *Implementation*: \n",
     "                    1. [Unstaggered prescription](Tutorial-GiRaFFE_NRPy-Source_Terms.ipynb)\n",
     "                        1. See also: [Tutorial for GRFFE](../Tutorial-GRFFE_Equations-Cartesian.ipynb); [Tutorial for GRHD](../Tutorial-GRHD_Equations-Cartesian.ipynb)\n",
@@ -44,12 +44,12 @@
     "                1. Basic interpolation of the metric gridfunctions at cell centers to cell faces given a specific direction. \n",
     "                1. [**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Metric_Face_Values.ipynb)\n",
     "            1. <font color='orange'><b> Just spot-checking</b></font>[Reconstruct primitives on cell faces:](Tutorial-GiRaFFE_NRPy-PPM.ipynb)\n",
-    "                1. This uses the piecewise-parabolic method to reconstruct gridfunctions on cell faces and apply slope-limiting algorithms mitigate the Gibbs phenomenon and preserve shocks.\n",
+    "                1. This uses the piecewise-parabolic method (PPM) to reconstruct gridfunctions on cell faces and apply slope-limiting algorithms mitigate the Gibbs phenomenon and preserve shocks.\n",
     "                1. [**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-PPM.ipynb)\n",
-    "            1. [Solve the Riemann Problem for $\\tilde{S}_i$:](Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb) (**JULY 2-8**)\n",
+    "            1. [Calculate the flux term for $\\tilde{S}_i$:](Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb) (**JULY 2-8**)\n",
     "                1. Use the reconstructed velocities and magnetic fields on the left and right sides of the cell faces to solve the Riemann problem and compute the flux of $\\tilde{S}_i$ on the interface.\n",
     "                1. [**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Stilde_flux.ipynb)\n",
-    "            1. <font color='orange'><b> Needs major overhaul </b></font>Solve the Riemann Problem for $A_i$:\n",
+    "            1. <font color='orange'><b> Needs major overhaul </b></font>Calculate the flux term for $A_i$:\n",
     "                1. Here, we apply a similar algorithm as in the previous step to compute the electric field $E_i = \\epsilon_{ijk} v^i B^i$. \n",
     "                1. *Implementation*:\n",
     "                    1. [Unstaggered prescription](Tutorial-GiRaFFE_NRPy-Afield_flux.ipynb): (**JULY 2-8**)\n",
@@ -107,7 +107,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
