SEOBNR: add a set of parameters for validation against LALSuite.  Partial derivative terms agree to at least 11 significant digits.

--- a/Tutorial-SEOBNR_Derivative_Routine.ipynb
+++ b/Tutorial-SEOBNR_Derivative_Routine.ipynb
@@ -415,27 +415,93 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hreal =  0.992892356616857\n"
+      "('SymPy version is ', 1.2)\n",
+      "The relative difference in Hreal is 0.000000000000000e+00\n",
+      "The relative difference in dHreal_dx is -1.440874957034916e-14\n",
+      "The relative difference in dHreal_dy is 1.442183891328167e-13\n",
+      "The relative difference in dHreal_dz is -5.859032236190101e-13\n",
+      "The relative difference in dHreal_dpx is 1.460926600271886e-16\n",
+      "The relative difference in dHreal_dpy is 7.941575533518701e-16\n",
+      "The relative difference in dHreal_dpz is -1.685453917954679e-11\n",
+      "The relative difference in dHreal_ds1x is 1.320812262178628e-11\n",
+      "The relative difference in dHreal_ds1y is -3.529922179429383e-11\n",
+      "The relative difference in dHreal_ds1z is -3.531776774182554e-13\n",
+      "The relative difference in dHreal_ds2x is 9.159598976881076e-12\n",
+      "The relative difference in dHreal_ds2y is 1.896716561461409e-11\n",
+      "The relative difference in dHreal_ds2z is -3.089471291652715e-13\n"
      ]
     }
    ],
    "source": [
-    "values = {'m1': 1.3e+01, 'm2': 1.1e+01, 'eta': 2.482638888888889e-01, 'x': 1.658444292696035e+01, 'y': 0.0e+00,\n",
-    "          'z': 0.0e+00, 'px': -8.721133427338679e-04, 'py': 2.693195683074527e-01, 'pz': -1.307987305388598e-04,\n",
-    "          's1x': 2.934027777777778e-02, 's1y': -5.868055555555557e-02, 's1z': 8.802083333333334e-02,\n",
-    "          's2x': -6.302083333333333e-02, 's2y': 4.201388888888890e-02, 's2z': -2.100694444444445e-02,\n",
-    "          'KK': 3.913980338468737e-01, 'k0': -7.447639215330089e-01, 'k1': -6.380586501824999e-01,\n",
-    "          'd1v2': -7.476323019145448e+01, 'dheffSSv2': 2.105103187692902e+01, 'tortoise': 1,\n",
-    "          'EMgamma': 0.577215664901532860606512090082402431}\n",
-    "for i in range(len(rhss)):\n",
-    "    term = sp.sympify(str(rhss[i]).replace(\"(xx)\",\"\"))\n",
-    "    for variable in values:\n",
-    "        term = term.subs(variable, values[variable])\n",
-    "    rhss[i] = sp.sympify(term)\n",
-    "    for k in range(i):\n",
-    "        term = term.subs(lhss[k],rhss[k])\n",
-    "    rhss[i] = term.evalf()\n",
-    "print(\"Hreal = \",rhss[-1])"
+    "def reset_values(values, tort_value):\n",
+    "    values.clear()\n",
+    "    if tort_value==1:\n",
+    "        values = {'m1': 1.300000000000000e+01, 'm2': 1.100000000000000e+01, 'eta': 2.482638888888889e-01,\n",
+    "                  'x': 1.658426645098320e+01, 'y': 3.975021008701605e-02, 'z': -1.820682538442627e-07,\n",
+    "                  'px': -1.517631642228534e-03, 'py': 2.693180445886167e-01, 'pz': -1.320499830947482e-04,\n",
+    "                  's1x': 2.934751675254397e-02, 's1y': -5.867672205485316e-02, 's1z': 8.802097562761332e-02,\n",
+    "                  's2x': -6.302678133897792e-02, 's2y': 4.200490780215727e-02, 's2z': -2.100705983874398e-02,\n",
+    "                  'KK': 3.913980338468737e-01, 'k0': -7.447639215330089e-01, 'k1': -6.380586501824999e-01,\n",
+    "                  'd1v2': -7.476323019145448e+01,'dheffSSv2':2.105103187692902e+01, 'tortoise': 1,\n",
+    "                  'EMgamma': 0.577215664901532860606512090082402431}\n",
+    "    else:\n",
+    "        values = {'m1': 1.300000000000000e+01, 'm2': 1.100000000000000e+01, 'eta': 2.482638888888889e-01,\n",
+    "                  'x': 1.658426645098320e+01, 'y': 3.975021008701605e-02, 'z': -1.820682538442627e-07,\n",
+    "                  'px': -1.633028076483384e-03, 'py': 2.693177679992048e-01, 'pz': -1.320499818278832e-04,\n",
+    "                  's1x': 2.934751675254397e-02, 's1y': -5.867672205485316e-02, 's1z': 8.802097562761332e-02,\n",
+    "                  's2x': -6.302678133897792e-02, 's2y': 4.200490780215727e-02, 's2z': -2.100705983874398e-02,\n",
+    "                  'KK': 3.913980338468737e-01, 'k0': -7.447639215330089e-01, 'k1': -6.380586501824999e-01,\n",
+    "                  'd1v2': -7.476323019145448e+01,'dheffSSv2':2.105103187692902e+01, 'tortoise': 2,\n",
+    "                  'EMgamma': 0.577215664901532860606512090082402431}\n",
+    "    return values\n",
+    "\n",
+    "def compute_Hreal(left_sides,right_sides,input_values):\n",
+    "    new_right_sides = []\n",
+    "    for i in range(len(right_sides)):\n",
+    "        term = sp.sympify(str(right_sides[i]).replace(\"(xx)\",\"\"))\n",
+    "        # Only look for the free variables in each expression to reduce computation time\n",
+    "        free_vars = term.free_symbols\n",
+    "        for variable in free_vars:\n",
+    "            term = term.subs(variable, input_values[str(variable)])\n",
+    "        # Evaluate each term to reduce computation time\n",
+    "        new_right_sides.append(sp.sympify(term.evalf()))\n",
+    "        # Store each subexpression in values\n",
+    "        input_values[str(left_sides[i])] = new_right_sides[i]\n",
+    "    return input_values\n",
+    "\n",
+    "LALSuite_validated_values = {'Hreal': 9.928923110195770e-01,'dHreal_dx': 9.932484846748471e-04,\n",
+    "                             'dHreal_dy': 2.813294366789505e-06, 'dHreal_dz': 1.926378549762488e-06,\n",
+    "                             'dHreal_dpx': -3.710666135737856e-04, 'dHreal_dpy': 6.116199124763537e-02,\n",
+    "                             'dHreal_dpz': -5.600910364542288e-07, 'dHreal_ds1x': -1.438467658934620e-05,\n",
+    "                             'dHreal_ds1y': -1.319462868057848e-06, 'dHreal_ds1z': 7.665413183773232e-04,\n",
+    "                             'dHreal_ds2x': -2.075691477548065e-05,'dHreal_ds2y': 2.456427688083135e-06,\n",
+    "                             'dHreal_ds2z': 8.762835349889455e-04}\n",
+    "\n",
+    "print(\"SymPy version is \",sympy_version_decimal)#TYLERK\n",
+    "\n",
+    "# We first evaluate Hreal, and add each subexpression to values so we can use them to compute partial derivatives\n",
+    "values = {}\n",
+    "values = reset_values(values,2)\n",
+    "values = compute_Hreal(lhss,rhss,values)\n",
+    "Hreal = values['Hreal']\n",
+    "trusted_Hreal = LALSuite_validated_values['Hreal']\n",
+    "print(\"The relative difference in Hreal is %.15e\" % ((trusted_Hreal - Hreal)/trusted_Hreal))\n",
+    "\n",
+    "variables_tort2 = [x,y,z]\n",
+    "variables_tort1 = [px,py,pz,s1x,s1y,s1z,s2x,s2y,s2z]\n",
+    "\n",
+    "for var in variables_tort2:\n",
+    "    Hrealprm = compute_Hreal(lhss_derivative[var],rhss_derivative[var],values)['Hrealprm']\n",
+    "    trusted_Hrealprm = LALSuite_validated_values['dHreal_d'+str(var)]\n",
+    "    print(\"The relative difference in dHreal_d%s is %.15e\" % (var,(trusted_Hrealprm - Hrealprm)/trusted_Hrealprm))\n",
+    "\n",
+    "values = reset_values(values,1)\n",
+    "values = compute_Hreal(lhss,rhss,values)\n",
+    "\n",
+    "for var in variables_tort1:\n",
+    "    Hrealprm = compute_Hreal(lhss_derivative[var],rhss_derivative[var],values)['Hrealprm']\n",
+    "    trusted_Hrealprm = LALSuite_validated_values['dHreal_d'+str(var)]\n",
+    "    print(\"The relative difference in dHreal_d%s is %.15e\" % (var,(trusted_Hrealprm - Hrealprm)/trusted_Hrealprm))"
    ]
   },
   {
@@ -515,21 +581,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.16"
   }
  },
  "nbformat": 4,
